/*
Â© 2025 Sharon Aicler (saichler@gmail.com)

Layer 8 Ecosystem is licensed under the Apache License, Version 2.0.
You may obtain a copy of the License at:

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package bi;

option go_package = "./types/bi";

import "bi-common.proto";
import "erp-common.proto";
import "api.proto";

// ============================================================================
// ANALYTICS MESSAGES
// ============================================================================

// @PrimeObject
// BiDataCube represents an OLAP data cube
message BiDataCube {
  string cube_id = 1;
  string name = 2;
  string description = 3;
  string data_source_id = 4;                // cross-ref: BiDataSource
  repeated string dimensions = 5;
  repeated string measures = 6;
  string refresh_schedule = 7;
  int64 last_refresh = 8;
  int64 row_count = 9;
  bool is_active = 10;
  map<string, string> custom_fields = 11;
  erp.AuditInfo audit_info = 12;
}

message BiDataCubeList {
  repeated BiDataCube list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// BiAnalysisModel represents an analysis/ML model
message BiAnalysisModel {
  string model_id = 1;
  string name = 2;
  string description = 3;
  BiModelType model_type = 4;
  BiModelStatus status = 5;
  string data_source_id = 6;                // cross-ref: BiDataSource
  string target_variable = 7;
  repeated string feature_variables = 8;
  string algorithm = 9;
  string hyperparameters = 10;              // JSON config
  double accuracy = 11;
  double precision_score = 12;
  double recall_score = 13;
  int64 training_date = 14;
  int64 last_prediction = 15;
  string owner_id = 16;                     // cross-ref: HCM Employee
  map<string, string> custom_fields = 17;
  repeated BiPrediction predictions = 19;
  erp.AuditInfo audit_info = 18;
}

message BiAnalysisModelList {
  repeated BiAnalysisModel list = 1;
  l8api.L8MetaData metadata = 2;
}

// BiPrediction represents a prediction result
message BiPrediction {
  string prediction_id = 1;
  string name = 3;
  string description = 4;
  int64 prediction_date = 5;
  string input_data = 6;                    // JSON input
  string output_data = 7;                   // JSON output
  double confidence = 8;
  string predicted_by = 9;                  // cross-ref: HCM Employee
  string notes = 10;
  map<string, string> custom_fields = 11;
  erp.AuditInfo audit_info = 12;
}

// @PrimeObject
// BiTrendAnalysis represents a trend analysis
message BiTrendAnalysis {
  string analysis_id = 1;
  string name = 2;
  string description = 3;
  string data_source_id = 4;                // cross-ref: BiDataSource
  string metric = 5;
  string time_period = 6;                   // DAILY, WEEKLY, MONTHLY, etc.
  int64 start_date = 7;
  int64 end_date = 8;
  BiTrendDirection direction = 9;
  double slope = 10;
  double r_squared = 11;
  double change_percent = 12;
  string analysis_result = 13;              // JSON detailed results
  int64 analysis_date = 14;
  string analyzed_by = 15;                  // cross-ref: HCM Employee
  map<string, string> custom_fields = 16;
  erp.AuditInfo audit_info = 17;
}

message BiTrendAnalysisList {
  repeated BiTrendAnalysis list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// BiScenario represents a what-if scenario
message BiScenario {
  string scenario_id = 1;
  string name = 2;
  string description = 3;
  BiScenarioType scenario_type = 4;
  string base_scenario_id = 5;              // cross-ref: BiScenario (for derived scenarios)
  string data_source_id = 6;                // cross-ref: BiDataSource
  string assumptions = 7;                   // JSON assumptions
  string variables = 8;                     // JSON variable modifications
  string results = 9;                       // JSON scenario results
  int64 created_date = 10;
  string created_by = 11;                   // cross-ref: HCM Employee
  bool is_active = 12;
  map<string, string> custom_fields = 13;
  erp.AuditInfo audit_info = 14;
}

message BiScenarioList {
  repeated BiScenario list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// BiBenchmark represents a benchmark comparison
message BiBenchmark {
  string benchmark_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string metric = 5;
  double internal_value = 6;
  double benchmark_value = 7;
  string benchmark_source = 8;
  string industry = 9;
  string region = 10;
  double variance = 11;
  double variance_percent = 12;
  int64 period_start = 13;
  int64 period_end = 14;
  int64 last_updated = 15;
  map<string, string> custom_fields = 16;
  erp.AuditInfo audit_info = 17;
}

message BiBenchmarkList {
  repeated BiBenchmark list = 1;
  l8api.L8MetaData metadata = 2;
}
